Changelog for Writer2LaTeX version 1.2 -> 1.4

---------- version 1.3.1 alpha ----------

[all] Optimized the parsing of the source document saving some time and space (several intermediate steps and large byte arrays
  are now avoided)

[all] API change: The converters can now convert directly from a DOM tree

[all] Removed unused code in writer2latex.xmerge

[w2x] Moved localized strings to .properties files